gitops_apps/hello-world-kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world-k
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
