gitops_apps/hello-world-kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-quay
  labels:
    app: hello-quay
    name: hello-quay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-quay
      name: hello-quay
  template:
    metadata:
      labels:
        app: hello-quay
        name: hello-quay
    spec:
      containers:
      - name: hello-quay
        image: quay.io/redhattraining/do480-hello-app:v1.0
