gitops_apps/hello-world-kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-quay
    name: hello-quay
  name: hello-quay
spec:
  ports:
  - port: OVERLAY_VALUE
  selector:
    name: hello-quay
