gitops_apps/hello-world-kustomize/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-quay
  labels:
    app: hello-quay
    name: hello-quay
spec:
#  host: hello-quay.apps.ocp4.example.com
#  subdomain: ''
  to:
    kind: Service
    name: hello-quay
    weight: 100
  port:
    targetPort: OVERLAY_VALUE
  wildcardPolicy: None
  tls:
    termination: edge
